--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>300iq website</title>
+    <title>Project Website</title>
 </head>
 
 <body class="">
